--- a/_posts/2016-05-26-Cinders.md
+++ b/_posts/2016-05-26-Cinders.md
@@ -4,7 +4,7 @@ title: "Cinders"
 date: 2016-05-26 12:00:00
 categories: fiction 
 render: normal
-abstract: This story arose from a focal point exercise for a class on writing fiction. This is the original version. I may rework this story at some future juncture. 
+info: This story arose from a focal point exercise for a class on writing fiction. This is the original version. I may rework this story at some future juncture. 
 ex: "The sun hung raw and heavy. Pines stood firm in the seething heat, rocks parting their number in sporadic bursts across the ridge. Thick humidity made the air oceanic, in which two animal outlines stood, looking down the one side..."
 ---
 The sun hung raw and heavy. Pines stood firm in the seething heat, rocks parting their number in sporadic bursts across the ridge. Thick humidity made the air oceanic, in which two animal outlines stood, looking down the one side. 
