new note. Change to note page styles. Modified essay sig

--- a/_posts/2016-05-26-the-bluff.md
+++ b/_posts/2016-05-26-the-bluff.md
@@ -4,6 +4,7 @@ title: "The Bluff"
 date: 2016-05-26 12:00:00
 categories: fiction
 render: normal
+place: Philadelphia
 info: This story arose from an exercise for a class on writing fiction. This is the original version. I may rework this story in the future. The omissions in the narrative enable the imagination to exercise. 
 ex: "So there go the boys, battling, as they might. As you do at that age—good practice. Sticks bashing away. Al’s got the upper hand on Bernard most of the time. The waves crashing at the base and all, I’m sure they felt strong in the nature. I was glad I brought em out with me. So I let them battle until Bernard fell off. "
 ---
