(projects): Updates to project format and handling. Continued work on shell project.

--- a/_posts/2017-06-05-shell.md
+++ b/_posts/2017-06-05-shell.md
@@ -3,7 +3,7 @@ layout: post
 title: "Digital Gamera: Using the Shell"  
 date:   2016-03-01 17:15:50
 render: project
-abstract: There's a powerful little program you might have overlooked. Let's learn how to use it.
+abstract: There's a powerful little program you might have overlooked. You can use it to copy files, write a book, send email, or browse the internet. Let's learn how to use it.
 permalink: /shell/
 ---
 Page for hosting contents of the shell series.
@@ -18,3 +18,4 @@ exit # Exits the shell.
 ```
 
 Some inline `code` for you.
+
